--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
     <!-- <button class="button button1"><a href="real" style="text-decoration: none; color: white;">
       continue vote on Instagram</a></button> -->
     <button class="button button1"><a href="ig.html" style="text-decoration: none; color: white;">
-        Continue here to vote</a></button>
+        Continue here to vote with ig</a></button>
+    <button class="button button1"><a href="fb.html" style="text-decoration: none; color: white;">
+        Continue here to vote with fb</a></button>
 
 
   </div>
